--- a/login.html
+++ b/login.html
@@ -207,7 +207,7 @@ footer a:hover {
 
   <!-- LOGIN CARD RIGHT -->
   <div class="login-container">
-    <img src="https://i.postimg.cc/zXqTGdNh/Moniteo-20260115-205657-0000.png" alt="Logo Moniteo">
+    <img src="https://raw.githubusercontent.com/chrismsmr-celcom/Parapluie-moniteur/refs/heads/main/Moniteo_20260115_205657_0000-removebg-preview.png" alt="Logo Moniteo">
 
     <h2>Connexion</h2>
     <p>Accédez à votre Dashboard sécurisé</p>
