--- a/dashboard.html
+++ b/dashboard.html
@@ -347,7 +347,7 @@ select{
 
 <!-- SIDEBAR -->
 <div class="sidebar">
-  <div class="logo"><img src="https://i.postimg.cc/RCdvV8Pj/Moniteo_20260115_214112_0000_removebg_preview.png" alt="Logo"></div>
+  <div class="logo"><img src="https://github.com/chrismsmr-celcom/Parapluie-moniteur/blob/main/Moniteo_20260115_205657_0000.png?raw=true" alt="Logo"></div>
   <a href="index.html">Accueil</a>
   <a href="sales.html">Ventes</a>
   <a href="inventory.html">Inventaire</a>
