--- a/history.html
+++ b/history.html
@@ -60,9 +60,9 @@ canvas { width: 100%; max-width: 1200px; height: 400px; margin-top: 1rem; border
 <body>
 
 <nav class="navbar">
-  <div class="logo"><img src="https://i.postimg.cc/RCdvV8Pj/Moniteo-20260115-214112-0000-removebg-preview.png" alt="Logo"></div>
+  <div class="logo"><img src="https://github.com/chrismsmr-celcom/Parapluie-moniteur/blob/main/Moniteo_20260115_214112_0000-removebg-preview.png?raw=true" alt="Logo"></div>
   <div class="nav-links">
-    <a href="index.html">Acceuil</a>
+    <a href="dashbord.html">Acceuil</a>
     <a href="sales.html">Ventes</a>
     <a href="inventory.html">Inventaire</a>
     <a href="staff.html">Staff</a>
