--- a/index.html
+++ b/index.html
@@ -235,8 +235,8 @@ footer a:hover {
 <!-- FOOTER -->
 <footer>
   &copy; 2026 Moniteo by Umbrella | 
-  <a href="#">Mentions légales</a> | 
-  <a href="#">Conditions d'utilisation</a>
+  <a href="mention.html">Mentions légales</a> | 
+  <a href="condition.html">Conditions d'utilisation</a>
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
