Update title and structure of condition.html

--- a/condition.html
+++ b/condition.html
@@ -3,9 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Conditions d'Utilisation</title>
+<title>Conditions d'Utilisation - Parapluie Moniteur</title>
 <style>
-  /* === Style global du projet === */
   body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
       font-size: 15px;
@@ -16,145 +15,94 @@
       padding: 0 20px 50px 20px;
   }
 
-  a {
-      color: #007bff;
-      text-decoration: none;
-  }
-  a:hover {
-      text-decoration: underline;
+  .container {
+      max-width: 900px;
+      margin: 0 auto;
   }
 
-  h1, h2, h3 {
-      font-weight: 700;
-      color: #1f2937;
-      margin-top: 30px;
-      margin-bottom: 15px;
-  }
+  a { color: #007bff; text-decoration: none; }
+  a:hover { text-decoration: underline; }
 
-  h1 {
-      font-size: 2rem;
-      text-align: center;
-      margin-top: 50px;
-      margin-bottom: 40px;
-  }
-
-  h2 {
-      font-size: 1.5rem;
-      border-bottom: 2px solid #e5e7eb;
-      padding-bottom: 5px;
-  }
-
-  h3 {
-      font-size: 1.2rem;
-  }
-
-  p, ul {
-      margin-bottom: 15px;
-  }
-
-  ul {
-      padding-left: 20px;
-  }
-
-  ul li {
-      margin-bottom: 8px;
-  }
+  h1, h2, h3 { font-weight: 700; color: #1f2937; margin-top: 30px; margin-bottom: 15px; }
+  h1 { font-size: 2rem; text-align: center; margin-top: 50px; margin-bottom: 40px; }
+  h2 { font-size: 1.5rem; border-bottom: 2px solid #e5e7eb; padding-bottom: 5px; }
 
   .section {
       background-color: #ffffff;
-      padding: 20px;
+      padding: 25px;
       margin-bottom: 20px;
       border-radius: 10px;
       box-shadow: 0 2px 6px rgba(0,0,0,0.05);
   }
 
+  .sommaire {
+      background: #eee;
+      padding: 15px;
+      border-radius: 8px;
+      margin-bottom: 30px;
+  }
+
   @media (max-width: 600px) {
-      body {
-          padding: 0 15px 30px 15px;
-      }
-      h1 {
-          font-size: 1.6rem;
-      }
-      h2 {
-          font-size: 1.3rem;
-      }
+      h1 { font-size: 1.6rem; }
+      h2 { font-size: 1.3rem; }
   }
 </style>
 </head>
 <body>
 
-<h1>Conditions d'Utilisation</h1>
+<div class="container">
+    <h1>Conditions d'Utilisation</h1>
 
-<div class="section">
-<h2>Définitions</h2>
-<p><b>Utilisateur :</b> Toute personne qui visite ou utilise le site <a href="https://chrismsmr-celcom.github.io/Parapluie-moniteur">https://chrismsmr-celcom.github.io/Parapluie-moniteur</a>.</p>
-<p><b>Services :</b> Tous les contenus, fonctionnalités, outils et informations mis à disposition sur le site.</p>
-<p><b>Contenu :</b> Textes, images, vidéos, fichiers audio, graphiques, icônes et tout élément présent sur le site.</p>
-<p><b>Données personnelles :</b> Informations permettant l’identification d’un utilisateur, collectées conformément au RGPD.</p>
-</div>
+    <div class="sommaire">
+        <strong>Sommaire :</strong>
+        <ul style="display: flex; flex-wrap: wrap; gap: 15px; list-style: none; padding: 0; font-size: 0.9rem;">
+            <li><a href="#s1">1. Acceptation</a></li>
+            <li><a href="#s3">3. Propriété</a></li>
+            <li><a href="#s4">4. Responsabilités</a></li>
+            <li><a href="#s5">5. RGPD</a></li>
+            <li><a href="#s10">10. Juridiction</a></li>
+        </ul>
+    </div>
 
-<div class="section">
-<h2>1. Acceptation des conditions</h2>
-<p>L’accès et l’utilisation du site impliquent l’acceptation pleine et entière des présentes conditions d’utilisation. Ces conditions peuvent être modifiées à tout moment, l’utilisateur est invité à les consulter régulièrement.</p>
-</div>
+    <div class="section">
+        <h2>Définitions</h2>
+        <p><b>Utilisateur :</b> Toute personne qui visite ou utilise le site <a href="https://chrismsmr-celcom.github.io/Parapluie-moniteur">https://chrismsmr-celcom.github.io/Parapluie-moniteur</a>.</p>
+        <p><b>Services :</b> Contenus, fonctionnalités et outils mis à disposition.</p>
+    </div>
 
-<div class="section">
-<h2>2. Accès au site</h2>
-<p>Le site est accessible à tout moment, sauf interruption pour maintenance ou problème technique. L’éditeur fera le maximum pour informer les utilisateurs des interventions prévues.</p>
-</div>
+    <div id="s1" class="section">
+        <h2>1. Acceptation des conditions</h2>
+        <p>L'accès au site implique l'acceptation pleine et entière des présentes conditions d'utilisation.</p>
+    </div>
 
-<div class="section">
-<h2>3. Propriété intellectuelle</h2>
-<p>Le site et tous ses éléments sont protégés par le Code de la Propriété Intellectuelle. Toute reproduction, distribution, modification ou exploitation non autorisée est interdite sans accord écrit de l’éditeur.</p>
-</div>
+    <div id="s3" class="section">
+        <h2>3. Propriété intellectuelle</h2>
+        <p>Le site et tous ses éléments (textes, logos, code source) sont protégés par le droit de la Propriété Intellectuelle. Toute reproduction non autorisée est passible de poursuites.</p>
+    </div>
 
-<div class="section">
-<h2>4. Responsabilités</h2>
-<ul>
-<li>L’utilisateur s’engage à utiliser le site conformément à la loi et aux présentes conditions.</li>
-<li>L’éditeur ne peut être tenu responsable des dommages directs ou indirects résultant de l’accès ou de l’utilisation du site, y compris pertes de données, interruption de service ou virus.</li>
-<li>L’utilisateur est responsable de la sécurité de son matériel et de ses identifiants.</li>
-</ul>
-</div>
+    <div id="s4" class="section">
+        <h2>4. Responsabilités</h2>
+        <ul>
+            <li>L'utilisateur est responsable de son matériel informatique.</li>
+            <li>L'éditeur décline toute responsabilité en cas d'interruption réseau ou de bug technique indépendant de sa volonté.</li>
+        </ul>
+    </div>
 
-<div class="section">
-<h2>5. Données personnelles et RGPD</h2>
-<p>Les données collectées sur le site sont traitées conformément au RGPD. Les utilisateurs disposent des droits suivants :</p>
-<ul>
-<li>Droit d’accès, de rectification et de mise à jour</li>
-<li>Droit de limitation du traitement et d’opposition</li>
-<li>Droit à la portabilité des données</li>
-<li>Droit de retirer son consentement à tout moment</li>
-<li>Droit de définir le sort de ses données après son décès</li>
-</ul>
-<p>Les demandes peuvent être adressées à : Makem – DPO, chris Musumary, Commune de la Gombe 01209 Kinshasa.</p>
-</div>
+    <div id="s5" class="section">
+        <h2>5. Données personnelles et RGPD</h2>
+        <p>Conformément au RGPD, vous disposez d'un droit d'accès, de rectification et de suppression de vos données.</p>
+        <p>Contact DPO : <strong>chris Musumary</strong> – chrismsmr@gmail.com</p>
+    </div>
 
-<div class="section">
-<h2>6. Cookies et balises (“tags”)</h2>
-<p>Le site utilise des cookies pour améliorer la navigation et analyser le trafic. L’utilisateur peut configurer son navigateur pour accepter ou refuser les cookies.</p>
-<p>Des balises internet peuvent être utilisées pour mesurer l’efficacité des contenus et publicités. Ces données sont anonymisées et traitées conformément au RGPD.</p>
-</div>
+    <div class="section">
+        <h2>9. Modifications du site</h2>
+        <p>L’éditeur se réserve le droit de modifier ou suspendre le site à tout moment sans préavis.</p>
+    </div>
 
-<div class="section">
-<h2>7. Liens externes</h2>
-<p>Le site peut contenir des liens vers d’autres sites. L’éditeur n’est pas responsable du contenu de ces sites et décline toute responsabilité en cas de problème lié à leur consultation.</p>
-</div>
-
-<div class="section">
-<h2>8. Sécurité</h2>
-<p>L’éditeur prend toutes les mesures techniques et organisationnelles raisonnables pour protéger les données et le site contre tout accès non autorisé, altération, divulgation ou destruction.</p>
-<p>Malgré ces mesures, aucune transmission sur Internet n’est totalement sécurisée. En cas de brèche, l’éditeur informera les utilisateurs dans les meilleurs délais.</p>
-</div>
-
-<div class="section">
-<h2>9. Modifications du site</h2>
-<p>L’éditeur se réserve le droit de modifier, suspendre ou interrompre tout ou partie du site à tout moment, sans préavis. Les modifications s’appliquent immédiatement aux utilisateurs.</p>
-</div>
-
-<div class="section">
-<h2>10. Droit applicable et juridiction</h2>
-<p>Tout litige relatif à l’utilisation du site est régi par le droit français. Les tribunaux compétents de Gombe sont seuls habilités à connaître de tout litige, sauf disposition légale contraire.</p>
+    <div id="s10" class="section">
+        <h2>10. Droit applicable et juridiction</h2>
+        <p>Les présentes conditions sont régies par le <strong>droit de la République Démocratique du Congo</strong>. En cas de litige, seuls les tribunaux de la <strong>Gombe (Kinshasa)</strong> seront compétents.</p>
+    </div>
 </div>
 
 </body>
